gcc/testsuite/rust/rustc/ui/parser/keyword-if-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py if'

fn main() {
    let if = "foo"; // { dg-error "" "" { target *-*-* } }
}

